# agent-sandbox-platform

./: .gitignore  Makefile  README.md  index.html
.github/workflows/: benchmarks.yml  ci.yml
benchmarks/: e2e_bench_test.go  go.mod  go.sum  kind-config.yaml  setup.sh  teardown.sh
cmd/bkctl/: go.mod  go.sum  main.go
control-plane/: go.mod  go.sum
control-plane/cmd/activity/: main.go
control-plane/cmd/bkctl/: main.go
control-plane/cmd/compute/: main.go
control-plane/cmd/control-plane/: main.go
control-plane/cmd/economics/: main.go
control-plane/cmd/governance/: main.go
control-plane/cmd/guardrails/: main.go
control-plane/cmd/human/: main.go
control-plane/cmd/identity/: main.go
control-plane/cmd/observability/: main.go
control-plane/cmd/policy/: main.go
control-plane/cmd/task/: main.go
control-plane/cmd/workspace/: main.go
control-plane/e2e/: activity_audit_test.go  agent_lifecycle_test.go  budget_enforcement_test.go  compute_fleet_test.go  docker_integration_test.go  e2e_test.go  full_stack_test.go  guardrails_pipeline_test.go  human_interaction_test.go  multi_tenant_test.go  task_workspace_test.go  tier_selection_test.go  workspace_orchestration_test.go
control-plane/internal/activity/: alert_repository.go  alerting.go  alerting_test.go  broker.go  (+10 more)
control-plane/migrations/: 001_initial.sql  002_economics.sql  003_workspace_compute.sql  004_workspace_sandbox.sql  005_task_enrichment.sql  006_missing_tables.sql  007_container_image.sql  008_egress_allowlist.sql  009_isolation_tiers.sql  010_immutable_actions.sql  011_guardrail_sets.sql  012_multi_tenancy.sql  013_warm_pool.sql  014_missing_columns.sql
deploy/: docker-compose.yml
deploy/docker/: Dockerfile.control-plane  Dockerfile.host-agent  Dockerfile.runtime
dev/bench/: data.js  index.html
docs/: api-reference.md  architecture.md  case-study.md  deployment.md  testing.md
docs/getting-started/: agent-guide.md  langchain-guide.md  operator-guide.md
proto/: buf.gen.yaml  buf.yaml
runtime/: Cargo.toml
runtime/crates/guardrails-eval/: Cargo.toml
runtime/crates/guardrails-eval/benches/: eval_bench.rs
runtime/crates/guardrails-eval/src/: lib.rs
runtime/crates/proto-gen/: Cargo.toml  build.rs
runtime/crates/proto-gen/src/: lib.rs
runtime/crates/runtime/: Cargo.toml
runtime/crates/runtime/src/: agent_api.rs  container.rs  lib.rs  main.rs  server.rs
runtime/crates/runtime/src/sandbox/: mod.rs
runtime/crates/runtime/src/tools/: mod.rs
runtime/crates/runtime/tests/: docker_egress_test.rs
runtime/tests/: verify_egress.sh
sdk/python/: pyproject.toml
sdk/python/bulkhead/: __init__.py  client.py  decorators.py  langchain.py  mcp.py  types.py
sdk/python/bulkhead/_generated/: __init__.py
sdk/python/examples/: basic_agent.py  langchain_agent.py
sdk/python/tests/: conftest.py  test_client.py  test_decorators.py  test_langchain.py  test_mcp.py  test_types.py
(+156 files in other folders)
