[workspace]
resolver = "2"
members = [
    "crates/runtime",
    "crates/guardrails-eval",
    "crates/proto-gen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bollard = "0.17"
async-trait = "0.1"
futures-util = "0.3"
sysinfo = "0.33"
