[package]
name = "host-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "host-agent"
path = "src/main.rs"

[dependencies]
proto-gen = { path = "../proto-gen" }
guardrails-eval = { path = "../guardrails-eval" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
prost-types.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
bollard.workspace = true
async-trait.workspace = true
futures-util.workspace = true
sysinfo.workspace = true
